k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: dev

spec:
  selector:
    app: test

  ports:
    - port: 80
      targetPort: 8080

  type: ClusterIP
